# Coursework3

./: README.md  main.py  pyproject.toml  requirements.txt
src/: db_manager.py  hh_api.py  utils.py
